--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
     "lint": "next lint",
     "test": "npx jest __tests__",
     "dev:https": "next dev --experimental-https --experimental-https-key ./certs/key.pem --experimental-https-cert ./certs/cert.pem",
-    "dev:https-test": "next dev --experimental-https"
+    "dev:https-test": "next dev --experimental-https",
+    "start:websocket": "npx tsx ./src/lib/webSocketServerStarter.ts",
+    "start:next": "next dev",
+    "start": "concurrently \"npm:start:websocket\" \"sleep 5 && npm run dev\""
   },
   "dependencies": {
     "@hono/zod-validator": "0.3.0",
@@ -34,6 +36,7 @@
     "bun": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "concurrently": "^9.1.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "hono": "^4.6.20",
@@ -54,6 +57,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "websocket": "^1.0.35",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -61,6 +65,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/websocket": "^1.0.10",
+    "@types/ws": "^8.18.0",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^8.57.1",
@@ -72,7 +78,9 @@
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
-    "typescript-eslint": "^8.24.1"
+    "tsx": "^4.19.3",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1",
+    "ws": "^8.18.1"
   }
 }
