--- a/package.json
+++ b/package.json
@@ -61,9 +61,12 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@eslint/js": "^9.21.0",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "@types/websocket": "^1.0.10",
     "@types/ws": "^8.18.0",
@@ -75,6 +78,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "postcss": "^8",
+    "react-beautiful-dnd": "^13.1.1",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
