--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.8.2",
     "axios-cookiejar-support": "^5.0.5",
     "bun": "^1.2.5",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -49,6 +50,7 @@
     "node-appwrite": "^14.1.0",
     "nuqs": "^1.19.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.6.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
